--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
         </nav>
         
         <!-- Image & Description -->
-        <p>The design I decided to do is the MADMP(MAD Musical Projector). This musical projector is no ordinary projector, the MADMP is specially deisgned to help beginners learn any insturment they desire.The projector will see the song you want to learn from either putting it in the tablet or singing a tune for it.This will cause the rojector to start projecting the keys for your insturment.</p>
+        <p>The design I decided to do is the MADMP(MAD Musical Projector). This musical projector is no ordinary projector, the MADMP is specially deisgned to help beginners learn any insturment they desire.The projector will see the song you want to learn from either putting it in the tablet or singing a tune for it.This will cause the rojector to start projecting the keys for your insturment.The MADMP isn't only a beginner tool,it can help musicians who have been playing for years.
+        </p>
+        <p>So what are all the things MADMP can do?</p>
+        <ol>
+            <li>MADMP- The main idea for MADMP was so beginners can have an easier time learning new songs to play. First you will input whatever insturment your using onto the mini screen on top of the projector this will help the projector understand what insturment has to be played. Afterwards you will be given a list of simple songs you can start off with once selected the projector will find your insturement and begin highlighting the keys or sting that will have to be played.You are able to repeat this process over and over again until you learn your song.</li>
+            <li>So what is this mini screen? Well the mini screen is built into the projector this is like your main menu, it gives you options on the songs you want to play, what insturment your playing, modes and all. There are settings added to it in case you get stuck or need help.</li>
+            <li>Next there is a compartment being the projector in this compartment it stores a tablet, this tablet can be used for edting your songs and making adjustments to them. The exciting part is it comes with your very own folder to input the songs you created, and it can be uploaded to where everyone can hear it. That way everyone can listen to your tunes from anywhere.</li>
+        </ol>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="script.js"></script>
