--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        }
         </style>
         
-        <title>MADMP</title>
+        <title>MusicP</title>
     </head>
     <body>
         <!-- HTML -->
@@ -32,7 +32,7 @@
         <!-- NavBar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">MADMP</a>
+            <a class="navbar-brand" href="#">Music</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
