--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        }
         </style>
         
-        <title>MusicP</title>
+        <title>Music</title>
     </head>
     <body>
         <!-- HTML -->
