--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
            <li>Home: The home button is where you can set up your profile so that other MADMP users know who you are and what songs you made. :)</li>
          </ul>
       </div>
+      </div>
       </div> 
       
        
