--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
           <a-scene embedded>
            <iframe allowfullscreen="yes" allowvr="yes"></iframe>
            <a-assets>
-            <img id="city" src="https://img.republicworld.com/republic-prod/stories/promolarge/xhdpi/tulpxazs354kglcp_1592630881.jpeg">
+            <img id="music" src="https://img.republicworld.com/republic-prod/stories/promolarge/xhdpi/tulpxazs354kglcp_1592630881.jpeg">
               <img id="https://assets.ltkcontent.com/images/classical-music-violin.jpg">
            </a-assets> 
-            <a-sky id="image-360" radius="10" src="#city"></a-sky>
+            <a-sky id="image-360" radius="10" src="#music"></a-sky>
             <a-entity class="link"></a-entity>
             <a-camera>
               <a-cursor
