--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         .sizing3 {
           font-size: 20px;
         }
+        .sizing4 {
+          height: 300px;
+          width: 500px;
+          
+        }
         .middle {
           text-align: center;
         }
@@ -141,7 +146,7 @@
            <li>Gallery: The gallery allows you to see other songs people have created and the steps they used to create it in case you wanted a tutorial for a certain song.</li>
            <li>Home: The home button is where you can set up your profile so that other MADMP users know who you are and what songs you made. :)</li>
          </ul>
-         <div id="myEmbeddedScene">
+         <div id="myEmbeddedScene" class="sizing4">
           <a-scene embedded>
            <iframe allowfullscreen="yes" allowvr="yes"></iframe>
            <a-assets>
