--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="col-sm-6">
             <div class="collapse multi-collapse" id="multiCollapseExample2">
               <div class="card card-body">
-                Music now has many different meanings to it, it's usually based of a person culture, religion or experience. Music now is made for specific people/ groups and it now has vast genres today compared to back then. With technological advancments in the music industry we are able to produce more sounds previously unatainable, and music can be heard everywhere even on the go.
+                Music now has many different meanings to it, it's usually based of a person culture, religion or experience. Music now is made for specific people/ groups and it now has vast genres today compared to back then. With technological advancements in the music industry we are able to produce more sounds previously unattainable, and music can be heard everywhere even on the go.
               </div>
             </div>
           </div>
