--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://mocah.org/thumbs/5330771-vinyl-headphone-record-lp-wallpaper-music-wallpapers-music-background-music-retro-vintage-shelf-old-mark-solarski-grado-black-headphone-free-images.jpg" class="d-block w-100" alt="...">
+              <img src="https://i.pinimg.com/564x/cf/64/a4/cf64a4fe4b397be81c710fe8878f727f.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <img src="https://storage.googleapis.com/stateless-campfire-pictures/2019/07/4fd38400-huawei-p30-pro-usual-macro-photography-vaporwave-aesthetic-music-01.jpg" class="d-block w-100" alt="...">
